# open-buddy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh  voice-helper.swift
bridge/: __init__.py  hooks_installer.py  main.py  router.py  voice.py
bridge/agents/: __init__.py  claude_code.py  codex.py  hermes.py  openclaw.py
bridge/ble/: __init__.py  transport.py
docs/: VoiceHelper-Info.plist  com.open-buddy.voice-helper.plist
firmware/: LICENSE
firmware/.pio/libdeps/m5stack-sticks3/M5PM1/: .piopm
firmware/src/: data.h  main.cpp
tests/: test_router.py
